name:           rotothopter
version:        0.0.1
cabal-version:  >= 1.8
build-type:     Simple
homepage:       https://github.com/spencerjanssen/rotothopter
license:        BSD3
license-file:   LICENSE
maintainer:     spencerjanssen@gmail.com
data-files:
    static/css/*.css
    static/fonts/*.eot
    static/fonts/*.svg
    static/fonts/*.ttf
    static/fonts/*.woff
    static/img/mana/15/*.png
    static/img/mana/40/*.png
    static/js/bootstrap.min.js
    static/js/jquery.hideseek.min.js
    static/js/jquery.min.js
    static/js/jquery.stickytableheaders.min.js
    static/js/jquery.timeago.js
    static/js/moment.min.js

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

Flag executable-only
    Description: only build the executable
    Default: False

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Import.Mail
                     Model
                     Model.Card
                     Model.InviteHash
                     Common
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.CubeList
                     Handler.UpdateMtgJson
                     Handler.ViewDraft
                     Handler.MakeDraftPick
                     Handler.AdminAddUser
                     Handler.PrettyCard
                     Handler.WatchDraft
                     Handler.AdminConsole
                     Handler.AllCubes
                     Handler.AllDrafts
                     Handler.UserProfile
                     Handler.NewDraftInvite
                     Handler.ViewDraftInvite
                     Handler.JoinDraftInvite
                     Handler.LaunchDraftInvite
                     Handler.PicksByParticipant

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -Werror
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    if flag(executable-only)
        Buildable: False

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-sqlite             >= 2.1.1      && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , smtps-gmail
                 , mime-mail
                 , yesod-eventsource
                 , lens
                 , esqueleto
                 , uuid

executable         rotothopter
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    if flag(executable-only)
        hs-source-dirs:    app, .
    else
        hs-source-dirs:    app
    if ! flag(executable-only)
        build-depends: rotothopter, base

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.6      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.6
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.3
                 , persistent-sqlite             >= 2.1.1      && < 2.3
                 , persistent-postgresql         >= 2.1.1      && < 2.3
                 , persistent-template           >= 2.0        && < 2.3
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.10
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.5
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , smtps-gmail
                 , mime-mail
                 , yesod-eventsource
                 , lens
                 , esqueleto
                 , uuid

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , rotothopter
                 , yesod-test >= 1.4.3
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
                 , lens
                 , esqueleto
    if flag(executable-only)
        buildable: False
